projectile effect with working crit

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -121,8 +121,8 @@
 
         <div class="luck-box">
             <div class="current-luck-box stats-box">
-                <label class="stat-label">Luck</label>
-                <input type="number" name="attr_Luck" class="stat-input" step="1" value="5" />
+                <label class="stat-label">Level</label>
+                <input type="number" name="attr_Level" class="stat-input" step="1" value="5" />
             </div>
 
             <hr class="basics-divider" />
@@ -218,31 +218,31 @@
 		<span class="current-talismans" >Current &nbsp;&nbsp;&nbsp;&nbsp; Max</span>
 		<div class="fire-talismans">
 			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/candlebright2.png" >
-			<input type="number" name="attr_fire_current" class="talisman-capacity" value="20" disabled="true" />
+			<input type="number" name="attr_fire_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_fire_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="water-talismans">
 			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/water-drop.png" >
-			<input type="number" name="attr_water_current" class="talisman-capacity" value="20" disabled="true" />
+			<input type="number" name="attr_water_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_water_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="metal-talismans">
 			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/anvil.png" >
-			<input type="number" name="attr_metal_current" class="talisman-capacity" value="20" disabled="true" />
+			<input type="number" name="attr_metal_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_metal_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="wood-talismans">
 			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/beech.png" >
-			<input type="number" name="attr_wood_current" class="talisman-capacity" value="20" disabled="true" />
+			<input type="number" name="attr_wood_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_wood_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="earth-talismans">
 			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/peaks.png" >
-			<input type="number" name="attr_earth_current" class="talisman-capacity" value="20" disabled="true" />
+			<input type="number" name="attr_earth_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_earth_capacity" class="talisman-capacity" value="20" />
 		</div>
