fixed add to character and char sheet button

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -191,7 +191,8 @@
                     <!--<div class="spell-line">-->
                 <span class="spell-top-row">   
                     <input type="text" class="spell-input line-input" name="attr_SpellName" value="Name"/>
-                    <button class="spell-roll" name="roll_spell" type="roll" value="[[d20]]"/>
+                    <input type="hidden" name="attr_RollSpell" value="Nothing here">
+                    <button class="spell-roll" name="roll_Spell" type="roll" value="@{RollSpell}"/>
                 <!--</div>-->
                 </span>
                 <div class="spell-bottom-row">
